# src/swagger.json
@@ -4516,6 +4516,53 @@
 				}
 			}
 		},
+		"/apirest/v1/lelang/getDataNPL": {
+			"get": {
+				"tags": ["API Lelang"],
+				"summary": "Untuk Data NPL (API)",
+				"parameters": [
+					{
+						"name": "sort",
+						"in": "query",
+						"style": "simple",
+						"explode": false,
+						"schema": {
+							"type": "enum",
+							"enum": ["ASC", "DESC"],
+							"example": ""
+						}
+					},
+					{
+						"name": "id_peserta",
+						"in": "query",
+						"style": "simple",
+						"explode": false,
+						"schema": {
+							"type": "string",
+							"example": ""
+						}
+					},
+					{
+						"name": "id_event",
+						"in": "query",
+						"style": "simple",
+						"explode": false,
+						"schema": {
+							"type": "string",
+							"example": ""
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Berhasil"
+					},
+					"404": {
+						"description": "Gagal atau Unauthorized"
+					}
+				}
+			}
+		},
 		"/apirest/v1/lelang/postPembelianNPL": {
 			"post": {
 				"tags": ["API Lelang"],
